--- a/app/globals.css
+++ b/app/globals.css
@@ -92,6 +92,10 @@ body {
     @apply text-[14px] font-[600];
   }
 
+  .bold-136 {
+    @apply text-[136px] font-[700] leading-[120%];
+  }
+
   .bold-88 {
     @apply text-[88px] font-[700] leading-[120%];
   }
@@ -124,11 +128,6 @@ body {
     @apply text-[16px] font-[700];
   }
 
-  /* Hero */
-  .hero-map {
-    @apply absolute right-0 top-0 h-screen w-screen bg-pattern-2 bg-cover bg-center md:-right-28 xl:-top-60;
-  }
-
   /* Camp */
   .camp-quote {
     @apply absolute -right-6 bottom-4 w-[140px] lg:bottom-10 xl:-right-8 xl:w-[186px] 3xl:right-0;
@@ -155,3 +154,30 @@ body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+/* hero css */
+
+.hero {
+  @apply 
+  bg-slate-700;
+}
+
+.hero__title {
+  @apply 2xl:text-[72px] sm:text-[64px] text-[50px] font-extrabold;
+}
+
+.hero__subtitle {
+  @apply text-[27px] text-gray-900 font-light mt-5;
+}
+/* 
+.hero__image-container {
+  @apply xl:flex-[1.5] flex justify-end items-end w-full xl:h-screen;
+}
+
+.hero__image {
+  @apply relative xl:w-full w-[90%] xl:h-full h-[590px] z-0;
+}
+
+.hero__image-overlay {
+  @apply absolute xl:-top-24 xl:-right-1/2 -right-1/4 bg-hero-bg bg-repeat-round -z-10 w-full xl:h-screen h-[590px] overflow-hidden;
+} */
